--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=spotify-api-fetch
 
+##To force the favicon over https instead of http
+server.forward-headers-strategy=native
+
+
 # Server port
 server.port=8080
 
