--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=spotify-api-fetch
 ##To force the favicon over https instead of http
 server.forward-headers-strategy=native
 
+logging.level.org.springframework.security=DEBUG
+
 
 # Server port
 server.port=8080
